Fixed image caption margin on mobile

--- a/dev/sass/layouts.scss
+++ b/dev/sass/layouts.scss
@@ -261,6 +261,9 @@
         }
         img {
             margin: 0 auto 16px;
+            +span {
+                margin-top: -7px;
+            }
         }
         strong {
             font-weight: 400;
